--- a/src/app/pages/home/task-todos/task-todos.component.scss
+++ b/src/app/pages/home/task-todos/task-todos.component.scss
@@ -21,6 +21,11 @@
     width: 100%;
   }
 
+  &__button-container{
+    border: none;
+    background-color: transparent;
+  }
+
   &__back-button {
     cursor: pointer;
   }
