--- a/src/app/shared/generic-button/generic-button.component.html
+++ b/src/app/shared/generic-button/generic-button.component.html
@@ -1,4 +1,4 @@
 <div class="button__container">
-    <button mat-flat-button>{{text}}</button>
+    <button [attr.aria-label]="text" mat-flat-button>{{text}}</button>
 </div>
   
