--- a/src/app/pages/home/task-todos/task-completion/task-completion.component.html
+++ b/src/app/pages/home/task-todos/task-completion/task-completion.component.html
@@ -1,8 +1,6 @@
 <div class="percentage__container">
-    <p>Tasks Completed: {{this.percentCompleted}} %</p>
-    <mat-progress-bar mode="determinate" [value]="percentCompleted"></mat-progress-bar>
+  <p>Tasks Completed: {{ this.percentCompleted }} %</p>
+  <mat-progress-bar mode="determinate" [value]="percentCompleted"></mat-progress-bar>
 </div>
 
-<div aria-live="polite" class="sr-only">
-    Tasks Completed: {{ percentCompleted }}%
-</div>
+<div aria-live="polite" class="sr-only">Tasks Completed: {{ percentCompleted }}%</div>
