--- a/src/app/pages/home/task-todos/task-filter/task-filter.component.scss
+++ b/src/app/pages/home/task-todos/task-filter/task-filter.component.scss
@@ -1,15 +1,14 @@
 @use '../../../../shared//styles/mixins' as *;
-:host{
-   @include host-full
+:host {
+  @include host-full;
 }
 
-mat-form-field{
-    width: 30%;
+mat-form-field {
+  width: 30%;
 }
 
 @media screen and (max-width: 668px) {
-    mat-form-field{
-        width: 70%;
-    }
+  mat-form-field {
+    width: 70%;
   }
-  
+}
