--- a/src/app/pages/home/task-todos/task-list/task-item/task-item.component.scss
+++ b/src/app/pages/home/task-todos/task-list/task-item/task-item.component.scss
@@ -35,6 +35,10 @@
     vertical-align: middle;
   }
 
+  &__icon-hover {
+    background-color: var(--mat-sys-primary);
+  }
+
   &__check {
     display: flex;
     justify-content: center;
