--- a/src/app/pages/home/task-todos/task-todos.component.html
+++ b/src/app/pages/home/task-todos/task-todos.component.html
@@ -23,7 +23,9 @@
   </div>
 
   <ng-template #noTasks>
-    <p class="task-layout__no-tasks-message" role="status" aria-live="polite" *ngIf="!isLoading">No Tasks To Display</p>
+    <p class="task-layout__no-tasks-message" role="status" aria-live="polite" *ngIf="!isLoading">
+      No Tasks To Display
+    </p>
   </ng-template>
 
   <div class="task-layout__footer">
