--- a/src/app/shared/styles/_functions.scss
+++ b/src/app/shared/styles/_functions.scss
@@ -1,6 +1,6 @@
-@use "sass:map";
+@use 'sass:map';
 @use './typography' as *;
 
-@function font-size($size-name){
-    @return map.get($font-sizes, $size-name);
+@function font-size($size-name) {
+  @return map.get($font-sizes, $size-name);
 }
