--- a/src/app/pages/create-project/create-project.component.html
+++ b/src/app/pages/create-project/create-project.component.html
@@ -1,37 +1,48 @@
-
 <h1 class="project-create__title">Create New Project</h1>
 <form class="project-create__form" [formGroup]="newProject" (ngSubmit)="createProject()">
-
   <!-- Project Text Input -->
   <mat-form-field class="project-create__form-field" appearance="outline">
     <mat-label>Enter Project</mat-label>
-    <input formControlName="projectText" matInput type="text" aria-describedby="projectTextError"  aria-required="true"/>
+    <input
+      formControlName="projectText"
+      matInput
+      type="text"
+      aria-describedby="projectTextError"
+      aria-required="true"
+    />
   </mat-form-field>
 
   <div id="projectTextError" class="project-create__error-text" *ngIf="projectTextErrors.length">
-    {{projectTextErrors.join(', ')}}
+    {{ projectTextErrors.join(', ') }}
   </div>
 
   <!-- Project Priority Select -->
   <mat-form-field class="project-create__form-field" appearance="outline">
     <mat-label>Select Priority</mat-label>
-    <mat-select formControlName="projectPrio" aria-describedby="selectErrorProject" aria-required="true">
+    <mat-select
+      formControlName="projectPrio"
+      aria-describedby="selectErrorProject"
+      aria-required="true"
+    >
       <mat-option value="Low">Low</mat-option>
       <mat-option value="Medium">Medium</mat-option>
       <mat-option value="High">High</mat-option>
     </mat-select>
   </mat-form-field>
 
-  <div class="project-create__error-text" id="selectErrorProjects" *ngIf="newProject.get('projectPrio')?.touched && newProject.get('projectPrio')?.errors?.['required']">
+  <div
+    class="project-create__error-text"
+    id="selectErrorProjects"
+    *ngIf="
+      newProject.get('projectPrio')?.touched && newProject.get('projectPrio')?.errors?.['required']
+    "
+  >
     <span>This is Required</span>
   </div>
 
   <!-- Submit Button -->
   <div class="project-create__button-container">
-    <app-generic-button 
-      type="submit" 
-      text="Create Project" 
-      [disabled]="!newProject.valid">
+    <app-generic-button type="submit" text="Create Project" [disabled]="!newProject.valid">
     </app-generic-button>
   </div>
 </form>
