--- a/src/app/pages/home/projects/project-list/project-item/project-item.component.scss
+++ b/src/app/pages/home/projects/project-list/project-item/project-item.component.scss
@@ -1,5 +1,5 @@
 :host {
-  height: 100%;        
+  height: 100%;
   width: 100%;
 }
 
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   padding: 1rem;
   border-bottom: 1px solid var(--mat-sys-primary);
 
@@ -65,13 +65,16 @@
     vertical-align: middle;
   }
 
+  &__icon-hover {
+    background-color: var(--mat-sys-primary);
+  }
+
   &__edit-container {
     input {
       background-color: var(--mat-sys-on-primary);
     }
   }
 
-  /* RESPONSIVE DESIGN */
   @media screen and (max-width: 668px) {
     &__title {
       font-size: x-small;
