--- a/src/app/shared/styles/_typography.scss
+++ b/src/app/shared/styles/_typography.scss
@@ -1,8 +1,8 @@
 $font-sizes: (
-  "small": 0.875rem,
-  "base": 1rem,
-  "medium": 1.125rem,
-  "large": 1.25rem,
-  "xl": 1.5rem,
-  "xxl": 2rem
+  'small': 0.875rem,
+  'base': 1rem,
+  'medium': 1.125rem,
+  'large': 1.25rem,
+  'xl': 1.5rem,
+  'xxl': 2rem,
 );
