--- a/src/app/pages/create-project/create-project.component.scss
+++ b/src/app/pages/create-project/create-project.component.scss
@@ -55,3 +55,13 @@
     width: 75%;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .project-create__error-text {
+    font-size: x-small;
+  }
+
+  .project-create__form {
+    width: 75%;
+  }
+}
