--- a/src/app/pages/home/projects/projects.component.scss
+++ b/src/app/pages/home/projects/projects.component.scss
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    margin-bottom: 0.5rem;
   }
 
   &__content {
@@ -43,12 +44,6 @@
 
   &__no-projects {
     font-size: large;
-  }
-}
-
-@media screen and (max-width: 376px) {
-  .task-layout__content {
-    width: 120%;
   }
 }
 
