--- a/src/app/pages/home/task-todos/task-todos.component.scss
+++ b/src/app/pages/home/task-todos/task-todos.component.scss
@@ -19,6 +19,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    margin-top: 0.5rem;
   }
 
   &__button-container {
@@ -35,6 +36,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    margin-top: 0.5rem;
   }
 
   &__content {
