--- a/src/app/pages/home/projects/project-list/project-list.component.html
+++ b/src/app/pages/home/projects/project-list/project-list.component.html
@@ -1,19 +1,19 @@
-<div class="task">
-  <div class="task__list" [ngClass]="{ 'task__list--blur': isBlur }">
+<div class="project">
+  <div class="project__list" [ngClass]="{ 'project__list--blur': isBlur }">
     <div
-      class="task__loading"
+      class="project__loading"
       *ngIf="isLoading; else showProjects"
       aria-busy="true"
       aria-live="polite"
     >
-      <mat-progress-spinner class="task__loading-icon" mode="indeterminate" diameter="50"
-        ><span class="sr-only">Loading Projects</span></mat-progress-spinner
-      >
+      <mat-progress-spinner class="project__loading-icon" mode="indeterminate" diameter="50">
+        <span class="sr-only">Loading Projects</span>
+      </mat-progress-spinner>
     </div>
 
     <ng-template #showProjects>
       <h2 id="projectListHeading" class="sr-only">List Of Projects</h2>
-      <ul aria-labelledby="projectListHeading" class="task__list-ul">
+      <ul aria-labelledby="projectListHeading" class="project__list-ul">
         <app-project-item
           *ngFor="let project of myProjects; let isLast = last"
           [project]="project"
@@ -30,10 +30,10 @@
     *ngIf="isEdit"
     [formGroup]="projectEdit"
     (ngSubmit)="submitEdit()"
-    class="task-edit"
+    class="project-edit"
     aria-label="Edit Project Form"
   >
-    <div class="task-edit__inputs">
+    <div class="project-edit__inputs">
       <mat-form-field appearance="outline">
         <mat-label>Enter Project</mat-label>
         <input
@@ -46,16 +46,16 @@
       </mat-form-field>
 
       <button mat-icon-button type="submit" aria-label="Submit Update">
-        <mat-icon class="task-edit__submit-icon">check</mat-icon>
+        <mat-icon class="project-edit__submit-icon">check</mat-icon>
       </button>
     </div>
 
     <div
-      class="task-edit__errors"
+      class="project-edit__errors"
       id="selectUpdateProject"
       *ngIf="projectEdit.get('projectText')?.touched && projectTextErrors.length"
     >
-      <div class="task-edit__error-text">
+      <div class="project-edit__error-text">
         {{ projectTextErrors.join(', ') }}
       </div>
     </div>
