--- a/src/app/pages/home/projects/project-list/project-list.component.scss
+++ b/src/app/pages/home/projects/project-list/project-list.component.scss
@@ -1,104 +1,107 @@
 @use '../../../../shared/styles/mixins' as *;
 
 :host {
-  @include host-full;
+  display: block;
+  height: 100%;
+  width: 100%;
 }
 
-// Block: task
-.task {
+/* Block: project */
+.project {
   position: relative;
   width: 100%;
   height: 100%;
+}
 
-  &__list {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    transition: filter 0.3s ease-in-out forwards;
+.project__list {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  transition: filter 0.3s ease-in-out forwards;
+}
 
-    &--blur {
-      filter: blur(10px);
-      pointer-events: none;
-    }
-  }
+.project__list--blur {
+  filter: blur(10px);
+  pointer-events: none;
+}
 
-  &__loading {
-    height: 100%;
-    width: 100%;
-    position: relative;
+/* Project loading */
+.project__loading {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
 
-    &__list-ul {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-      list-style: none;
+.project__list-ul {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
-      &-icon {
-        height: 50px;
-        width: 50px;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 999;
-      }
-    }
-  }
+.project__loading-icon {
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+}
 
-  // Block: task-edit
-  .task-edit {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+/* Block: project-edit */
+.project-edit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9909;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9909;
 
-    width: 50%;
-    padding: 1rem;
-    background-color: var(--mat-sys-on-primary);
-    border: 1px solid var(--mat-sys-primary);
-    border-radius: 10px;
-    color: var(--mat-sys-primary);
+  width: 50%;
+  padding: 1rem;
+  background-color: var(--mat-sys-on-primary);
+  border: 1px solid var(--mat-sys-primary);
+  border-radius: 10px;
+  color: var(--mat-sys-primary);
+}
 
-    &__inputs {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      width: 100%;
-      gap: 1rem;
-    }
+.project-edit__inputs {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  gap: 1rem;
+}
 
-    &__errors {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      margin-top: 0.5rem;
-      width: 100%;
-    }
+.project-edit__errors {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 0.5rem;
+  width: 100%;
+}
 
-    &__error-text {
-      font-size: small;
-      color: red;
-    }
+.project-edit__error-text {
+  font-size: small;
+  color: red;
+}
 
-    &__submit-icon {
-      background-color: var(--mat-sys-on-primary);
-      color: var(--mat-sys-primary);
-      vertical-align: middle;
-    }
-  }
+.project-edit__submit-icon {
+  background-color: var(--mat-sys-on-primary);
+  color: var(--mat-sys-primary);
+  vertical-align: middle;
 }
 
 mat-form-field {
@@ -110,8 +113,9 @@ mat-form-field {
   left: -10000px;
 }
 
+/* Responsive */
 @media screen and (max-width: 668px) {
-  .task-edit {
+  .project-edit {
     width: 90%;
   }
 }
