Added searchbar and logic so that projects get marked as Done if all tasks in it is marked as done

--- a/src/app/pages/home/projects/project-list/project-item/project-item.component.html
+++ b/src/app/pages/home/projects/project-list/project-item/project-item.component.html
@@ -34,6 +34,17 @@
     </button>
   </div>
 
+  <div class="project-task__actions">
+    <mat-checkbox
+      class="project-task__icon"
+      aria-label="Toggle Completed"
+      (change)="toggleCompleted()"
+      [checked]="project.completed"
+    >
+    </mat-checkbox>
+    <p class="project-task__text">Done</p>
+  </div>
+
   <div class="project-task__priority">
     <p>{{ project.priority | capitalize }}</p>
   </div>
