--- a/src/app/pages/home/projects/project-list/project-list.component.html
+++ b/src/app/pages/home/projects/project-list/project-list.component.html
@@ -18,6 +18,7 @@
           *ngFor="let project of myProjects; let isLast = last"
           [project]="project"
           (toggled)="handleToggle($event)"
+          (toggled)="handleToggle($event)"
           (enableBlur)="handleBlur($event)"
           (enableEdit)="handleEdit($event[0], $event[1])"
           [isLast]="isLast"
