--- a/src/app/pages/home/projects/project-list/project-list.component.scss
+++ b/src/app/pages/home/projects/project-list/project-list.component.scss
@@ -39,7 +39,7 @@
 .project__list-ul {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: auto;
   width: 100%;
   margin: 0;
   padding: 0;
