--- a/src/app/shared/generic-button/generic-button.component.scss
+++ b/src/app/shared/generic-button/generic-button.component.scss
@@ -3,13 +3,15 @@
   justify-content: flex-start;
   height: auto;
   width: 100%;
+  height: 100%;
 }
 
 .button__container {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   margin-top: 0.5rem;
-  justify-content: flex-end;
+  justify-content: center;
   white-space: nowrap;
 }
